--- a/output/output.css
+++ b/output/output.css
@@ -763,6 +763,10 @@ img {
   top: 30px;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -779,16 +783,40 @@ img {
   z-index: 11;
 }
 
-.z-10 {
-  z-index: 10;
+.z-\[1\] {
+  z-index: 1;
+}
+
+.row-span-2 {
+  grid-row: span 2 / span 2;
 }
 
 .m-2 {
   margin: 0.5rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -811,6 +839,27 @@ img {
   display: none;
 }
 
+.size-28 {
+  width: 7rem;
+  height: 7rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-28 {
+  height: 7rem;
+}
+
+.h-48 {
+  height: 12rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -819,16 +868,16 @@ img {
   height: 100%;
 }
 
-.h-6 {
-  height: 1.5rem;
-}
-
 .w-12 {
   width: 3rem;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .border-collapse {
@@ -877,12 +926,40 @@ img {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+
+  50% {
+    transform: none;
+    animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+}
+
+.animate-bounce {
+  animation: bounce 1s infinite;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
 
 .resize {
   resize: both;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-\[112px_1fr\] {
+  grid-template-columns: 112px 1fr;
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -901,6 +978,10 @@ img {
   gap: 2.5rem;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .gap-6 {
   gap: 1.5rem;
 }
@@ -910,12 +991,20 @@ img {
        column-gap: 1.25rem;
 }
 
-.gap-y-5 {
-  row-gap: 1.25rem;
-}
-
 .gap-y-10 {
   row-gap: 2.5rem;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
+}
+
+.gap-y-5 {
+  row-gap: 1.25rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -952,6 +1041,14 @@ img {
   align-self: flex-start;
 }
 
+.self-end {
+  align-self: flex-end;
+}
+
+.justify-self-start {
+  justify-self: start;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -968,9 +1065,21 @@ img {
   border-width: 2px;
 }
 
+.border-4 {
+  border-width: 4px;
+}
+
+.border-t-2 {
+  border-top-width: 2px;
+}
+
 .border-accent {
   --tw-border-opacity: 1;
   border-color: hsl(var(--color-accent) / var(--tw-border-opacity, 1));
+}
+
+.border-transparent {
+  border-color: transparent;
 }
 
 .bg-accent {
@@ -997,6 +1106,16 @@ img {
   background-color: hsl(var(--color-secondary) / var(--tw-bg-opacity, 1));
 }
 
+.object-\[60\%\] {
+  -o-object-position: 60%;
+     object-position: 60%;
+}
+
+.object-top {
+  -o-object-position: top;
+     object-position: top;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -1009,6 +1128,15 @@ img {
   padding: 1.5rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1019,12 +1147,12 @@ img {
   padding-bottom: 1.25rem;
 }
 
-.pl-6 {
-  padding-left: 1.5rem;
-}
-
 .pl-4 {
   padding-left: 1rem;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
 }
 
 .text-center {
@@ -1087,6 +1215,11 @@ img {
   color: hsl(var(--color-accent) / var(--tw-text-opacity, 1));
 }
 
+.text-primary {
+  --tw-text-opacity: 1;
+  color: hsl(var(--color-primary) / var(--tw-text-opacity, 1));
+}
+
 .text-text {
   --tw-text-opacity: 1;
   color: hsl(var(--color-text) / var(--tw-text-opacity, 1));
@@ -1094,6 +1227,17 @@ img {
 
 .underline {
   text-decoration-line: underline;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-primary {
+  --tw-shadow-color: hsl(var(--color-primary) / 1);
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .outline {
@@ -1148,8 +1292,24 @@ img {
   }
 }
 
+.\*\:flex > * {
+  display: flex;
+}
+
 .\*\:basis-full > * {
   flex-basis: 100%;
+}
+
+.\*\:flex-col > * {
+  flex-direction: column;
+}
+
+.\*\:items-center > * {
+  align-items: center;
+}
+
+.\*\:gap-y-5 > * {
+  row-gap: 1.25rem;
 }
 
 .\*\:space-y-2 > * > :not([hidden]) ~ :not([hidden]) {
@@ -1158,9 +1318,54 @@ img {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.\*\:rounded > * {
+  border-radius: 0.25rem;
+}
+
+.\*\:border-2 > * {
+  border-width: 2px;
+}
+
+.\*\:border-accent > * {
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--color-accent) / var(--tw-border-opacity, 1));
+}
+
+.\*\:p-8 > * {
+  padding: 2rem;
+}
+
+.\*\:px-4 > * {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.\*\:py-2 > * {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.\*\:outline-none > * {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.placeholder\:text-text\/80::-moz-placeholder {
+  color: hsl(var(--color-text) / 0.8);
+}
+
+.placeholder\:text-text\/80::placeholder {
+  color: hsl(var(--color-text) / 0.8);
+}
+
 .before\:absolute::before {
   content: var(--tw-content);
   position: absolute;
+}
+
+.before\:-left-0::before {
+  content: var(--tw-content);
+  left: -0px;
 }
 
 .before\:bottom-0::before {
@@ -1178,6 +1383,11 @@ img {
   left: 0.5rem;
 }
 
+.before\:top-0::before {
+  content: var(--tw-content);
+  top: 0px;
+}
+
 .before\:top-2\/4::before {
   content: var(--tw-content);
   top: 50%;
@@ -1186,11 +1396,6 @@ img {
 .before\:top-4::before {
   content: var(--tw-content);
   top: 1rem;
-}
-
-.before\:top-0::before {
-  content: var(--tw-content);
-  top: 0px;
 }
 
 .before\:-z-10::before {
@@ -1208,14 +1413,14 @@ img {
   height: 0.25rem;
 }
 
-.before\:h-px::before {
-  content: var(--tw-content);
-  height: 1px;
-}
-
 .before\:h-6::before {
   content: var(--tw-content);
   height: 1.5rem;
+}
+
+.before\:h-px::before {
+  content: var(--tw-content);
+  height: 1px;
 }
 
 .before\:w-2\/3::before {
@@ -1233,11 +1438,6 @@ img {
   width: 1rem;
 }
 
-.before\:w-\[95\%\]::before {
-  content: var(--tw-content);
-  width: 95%;
-}
-
 .before\:w-\[85\%\]::before {
   content: var(--tw-content);
   width: 85%;
@@ -1251,6 +1451,11 @@ img {
 .before\:w-\[92\%\]::before {
   content: var(--tw-content);
   width: 92%;
+}
+
+.before\:w-\[95\%\]::before {
+  content: var(--tw-content);
+  width: 95%;
 }
 
 .before\:origin-right::before {
@@ -1349,6 +1554,11 @@ img {
   top: 1.5rem;
 }
 
+.after\:-z-\[1\]::after {
+  content: var(--tw-content);
+  z-index: -1;
+}
+
 .after\:z-10::after {
   content: var(--tw-content);
   z-index: 10;
@@ -1396,6 +1606,12 @@ img {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.after\:scale-y-100::after {
+  content: var(--tw-content);
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .after\:rounded::after {
   content: var(--tw-content);
   border-radius: 0.25rem;
@@ -1404,6 +1620,12 @@ img {
 .after\:rounded-full::after {
   content: var(--tw-content);
   border-radius: 9999px;
+}
+
+.after\:bg-accent::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--color-accent) / var(--tw-bg-opacity, 1));
 }
 
 .after\:bg-accent\/60::after {
@@ -1426,6 +1648,13 @@ img {
   transition-duration: 150ms;
 }
 
+.after\:transition-transform::after {
+  content: var(--tw-content);
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .after\:content-\[\'\'\]::after {
   --tw-content: '';
   content: var(--tw-content);
@@ -1436,6 +1665,15 @@ img {
   content: var(--tw-content);
 }
 
+.hover\:border-2:hover {
+  border-width: 2px;
+}
+
+.hover\:border-accent:hover {
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--color-accent) / var(--tw-border-opacity, 1));
+}
+
 .hover\:text-accent:hover {
   --tw-text-opacity: 1;
   color: hsl(var(--color-accent) / var(--tw-text-opacity, 1));
@@ -1444,6 +1682,11 @@ img {
 .hover\:text-secondary:hover {
   --tw-text-opacity: 1;
   color: hsl(var(--color-secondary) / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-text:hover {
+  --tw-text-opacity: 1;
+  color: hsl(var(--color-text) / var(--tw-text-opacity, 1));
 }
 
 .hover\:before\:origin-left:hover::before {
@@ -1468,8 +1711,19 @@ img {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:after\:scale-y-0:hover::after {
+  content: var(--tw-content);
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .group:hover .group-hover\:origin-right {
   transform-origin: right;
+}
+
+.group:hover .group-hover\:translate-x-2 {
+  --tw-translate-x: 0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .group:hover .group-hover\:scale-x-100 {
@@ -1482,8 +1736,16 @@ img {
     position: static;
   }
 
+  .sm\:row-span-5 {
+    grid-row: span 5 / span 5;
+  }
+
   .sm\:hidden {
     display: none;
+  }
+
+  .sm\:h-16 {
+    height: 4rem;
   }
 
   .sm\:scale-y-100 {
@@ -1491,8 +1753,25 @@ img {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-rows-\[min-content\] {
+    grid-template-rows: min-content;
+  }
+
+  .sm\:grid-rows-subgrid {
+    grid-template-rows: subgrid;
+  }
+
   .sm\:flex-row {
     flex-direction: row;
+  }
+
+  .sm\:gap-x-5 {
+    -moz-column-gap: 1.25rem;
+         column-gap: 1.25rem;
   }
 
   .sm\:bg-transparent {
@@ -1541,20 +1820,92 @@ img {
     grid-column: span 2 / span 2;
   }
 
+  .md\:col-start-1 {
+    grid-column-start: 1;
+  }
+
+  .md\:col-start-7 {
+    grid-column-start: 7;
+  }
+
+  .md\:-col-end-1 {
+    grid-column-end: -1;
+  }
+
+  .md\:col-end-9 {
+    grid-column-end: 9;
+  }
+
   .md\:row-span-1 {
     grid-row: span 1 / span 1;
+  }
+
+  .md\:row-start-1 {
+    grid-row-start: 1;
+  }
+
+  .md\:row-start-3 {
+    grid-row-start: 3;
+  }
+
+  .md\:-row-end-1 {
+    grid-row-end: -1;
+  }
+
+  .md\:row-end-11 {
+    grid-row-end: 11;
+  }
+
+  .md\:grid-cols-12 {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
   }
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:grid-rows-12 {
+    grid-template-rows: repeat(12, minmax(0, 1fr));
+  }
+
   .md\:grid-rows-3 {
     grid-template-rows: repeat(3, minmax(0, 1fr));
   }
 
+  .md\:gap-0 {
+    gap: 0px;
+  }
+
   .md\:p-16 {
     padding: 4rem;
+  }
+
+  .md\:grayscale {
+    --tw-grayscale: grayscale(100%);
+    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+  }
+
+  .md\:transition-all {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+
+  .md\:transition-transform {
+    transition-property: transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+
+  .md\:hover\:scale-110:hover {
+    --tw-scale-x: 1.1;
+    --tw-scale-y: 1.1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:hover\:grayscale-0:hover {
+    --tw-grayscale: grayscale(0);
+    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   }
 }
 
@@ -1580,6 +1931,10 @@ img {
     margin-right: auto;
   }
 
+  .lg\:h-full {
+    height: 100%;
+  }
+
   .lg\:w-3\/4 {
     width: 75%;
   }
@@ -1592,6 +1947,10 @@ img {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
   .lg\:grid-rows-2 {
     grid-template-rows: repeat(2, minmax(0, 1fr));
   }
@@ -1602,6 +1961,11 @@ img {
 
   .lg\:flex-row-reverse {
     flex-direction: row-reverse;
+  }
+
+  .lg\:gap-x-10 {
+    -moz-column-gap: 2.5rem;
+         column-gap: 2.5rem;
   }
 
   .lg\:gap-x-24 {
@@ -1619,11 +1983,6 @@ img {
 
   .lg\:gap-y-8 {
     row-gap: 2rem;
-  }
-
-  .lg\:gap-x-10 {
-    -moz-column-gap: 2.5rem;
-         column-gap: 2.5rem;
   }
 
   .lg\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
@@ -1658,6 +2017,11 @@ img {
   .lg\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
   .lg\:text-xl {
@@ -1769,6 +2133,10 @@ img {
   .xl\:gap-x-12 {
     -moz-column-gap: 3rem;
          column-gap: 3rem;
+  }
+
+  .xl\:gap-y-10 {
+    row-gap: 2.5rem;
   }
 
   .xl\:gap-y-24 {
